--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,20 @@
 #
 # This file contains configuration flags to customize your site
 #
-
+title: the Gracy Corp
 # Name of your site (displayed in the header)
 name: "vobaNets"
 
+# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
+# Used for Sitemap.xml and your RSS feed
+url: "https://doriver.github.io"
+
+author: "vobaNets"
+name: "vobaNets"
+email: "vobanets@gmail.com"
+
 # Short bio or description (displayed in the header)
-description: Software Develop group
+description: "Software Develop group"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
@@ -39,9 +47,6 @@ disqus:
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
 
-# Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
-# Used for Sitemap.xml and your RSS feed
-url: "https://doriver.github.io"
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
