--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ email: "vobanets@gmail.com"
 description: "Software Develop group"
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://150.95.187.73:3322/image/2.jpg
+avatar: "https://150.95.187.73:3322/image/2.jpg"
 
 #
 # Flags below are optional
